--- a/templates/Factory/argocd-application-details.yaml
+++ b/templates/Factory/argocd-application-details.yaml
@@ -143,10 +143,8 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.object.fields" (dict
-                                      "jsonPath" ".metadata.annotations"
-                                      "type" "annotations"
-                                      "title" "Annotations"
+                                  {{ include "incloud-web-resources.factory.annotations.block" (dict
+                                      "endpoint" "/api/clusters/{2}/k8s/apis/argoproj.io/v1alpha1/namespaces/{3}/applications/{6}"
                                     ) | nindent 34
                                   }}
 
