update github actions

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,24 +1,48 @@
 apiVersion: v2
 name: incloud-web-resources
-description: A Helm chart for Kubernetes
+description: Chart for configuring Kubernetes Web UI InCloud
 
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
 
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
+# Chart (packaging) version — semver. Bump on ANY template/values change.
 version: 0.1.0
 
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+# Application version — free-form string. Tie it to app images/tags you ship.
+# Tip: keep it in sync with image tags from values.yaml.
+appVersion: "RELEASE"
+
+# Minimal supported Kubernetes version (features used: apps/v1, probes, fsGroupChangePolicy, etc.)
+kubeVersion: ">=1.22.0-0"
+
+# Helpful discoverability
+keywords:
+  - incloud
+  - openapi-ui
+  - kubernetes
+  - helm
+
+# home: https://example.com/incloud
+# icon: https://example.com/incloud-icon.png
+
+sources:
+  - https://github.com/PRO-Robotech/incloud-web-resources
+
+maintainers:
+  - name: PRO-Robotech
+    email: info@prorobotech.ru
+    url: https://t.me/incloud_ru
+
+# Optional dependencies (uncomment if you add subcharts)
+# dependencies:
+#   - name: some-subchart
+#     version: 1.x.x
+#     repository: https://charts.example.com
+
+annotations:
+  # Artifact Hub metadata (optional but useful if you publish the chart)
+  artifacthub.io/category: infrastructure
+  artifacthub.io/links: |
+    - name: Source
+      url: https://github.com/PRO-Robotech/openapi-ui
+    - name: Issues
+      url: https://github.com/PRO-Robotech/openapi-ui/issues
